fixat horizontal scroll och primära ikoner för mobile kategorier

--- a/frontend/src/MobileFooter.module.css
+++ b/frontend/src/MobileFooter.module.css
@@ -1,24 +1,53 @@
 .footerContainer {
-    width: 100%;
-    overflow-x: auto;
-    white-space: nowrap;
-    padding: 10px 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff81;
+  z-index: 1;
+  padding: 8.5px 0px;
+  margin-bottom: 8px; 
+  overflow-x: auto; 
+  white-space: nowrap; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+}
+
+.iconsContainer {
+  display: flex;
+  justify-content: flex-start; 
+  padding: 0 10px; 
+}
+
+.iconButton {
+  border: none;
+  background-color: transparent;
+  margin-right: 10px;
+}
+
+.iconImage {
+  width: 50px;
+  height: 50px;
+}
+
+@media (max-width: 780px) {
+  .footerContainer {
+    justify-content: flex-start; 
   }
-  
+}
+
+@media (min-width: 500px) and (max-width: 780px) {
+  .footerContainer {
+    justify-content: center; 
+  }
+}
+
+@media (max-width: 500px) {
+  .footerContainer {
+    justify-content: flex-start; 
+  }
   .iconsContainer {
-    display: flex;
-    justify-content: center; /* Center the icons horizontally */
+    justify-content: center; 
   }
-  
-  .iconButton {
-    border: none;
-    background-color: transparent;
-    margin-right: 10px;
-  }
-  
-  .iconImage {
-    width: 40px;
-    height: 40px;
-    /* Add any additional styling as needed */
-  }
-  
+}
